--- a/Changelog
+++ b/Changelog
@@ -5,9 +5,13 @@ directory.  When make does ./get_data > data, it was failing due to a bad
 reference count because we were incrementing the writers when a child came
 in and used the parent's fd.  Then when the file was closed, it asserted since
 the reference count was still 1.  So now we don't increment the writers for
-children but now we're seeing this other strange behavior:
+children but now we're still seeing this other strange behavior:
 jvpn-132-65:/tmp/plfs_mnt/SC09/data/summary>./get_data >! data
 cat: stdout: Result too large
+
+2) plfs_read is now multi-threaded when a logical read spans multiple physical
+data chunks.  In addition, if these chunks need to be opened that is done in
+the threads as well so we parallelize both the opens and the reads
 
 ~~~ Version 0.1.6
 
