git-svn-id: https://plfs.svn.sourceforge.net/svnroot/plfs/trunk@190 979fb63a-54b4-4514-8d67-9ab8ea1b59df

--- a/Changelog
+++ b/Changelog
@@ -13,6 +13,11 @@ cat: stdout: Result too large
 data chunks.  In addition, if these chunks need to be opened that is done in
 the threads as well so we parallelize both the opens and the reads
 
+3) Container::populateIndex is now multi-threaded when the container has
+more than one index file.  This means of course that overlapped writes are
+now non-deterministically handled in addition to being undefined as they
+were previously.
+
 ~~~ Version 0.1.6
 
 1) Gary found a bug in the old version running on cuda.lanl.gov.  I tried to 
