--- a/README
+++ b/README
@@ -11,6 +11,25 @@ cd plfs/versions/<VERSION>
 make all install
 
 ***************************************************************************
+Mounting a PLFS file system using FUSE
+***************************************************************************
+# install FUSE: http://fuse.sourceforge.net/
+# make sure the fuse module is loaded.  it should be at /dev/fuse
+cd plfs/versions/<VERSION>/trunk
+# put the plfs config file into place
+cp plfsrc.example $HOME/.plfsrc <normal user>
+- or - 
+cp plfsrc.example /etc/plfsrc <root>
+# customize the plfs config file for your system
+# the weird map thing is for LANL to distribute users across multiple
+# panasas directors.  Most systems can have a simple map function.
+./plfs [fuse_options] <mount point>
+# some useful options to pass to fuse:
+# -o allow_other   : if mounting as root, this allows others to use plfs
+# -o big_writes    : newer versions of fuse can break writes into 128K chunks 
+# -o direct_io     : older versions can too, but then mmap doesn't work
+
+***************************************************************************
 Developer Installation (Default Configuration Values. See configure --help)
 ***************************************************************************
 svn co https://plfs.svn.sourceforge.net/svnroot/plfs plfs
