the mount was failing with a cryptic error when a mount point or a backend doesn't exist.  Now tools/plfs_check_config checks whether those directories exist.
Fixed the symbolic link problem.



git-svn-id: https://plfs.svn.sourceforge.net/svnroot/plfs/trunk@437 979fb63a-54b4-4514-8d67-9ab8ea1b59df

--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,18 @@
+~~~ Version 1.1.5
+Bug fix for symbolic links.  I swear this is the second time I fixed this bug
+
+~~~ Version 1.1.4
+Bug fix in the multiple mount point parsing (unitialized string pointer)
+
+~~~ Version 1.1.3
+Added the multiple mount point parsing in plfsrc
+
+~~~ Version 1.1.2
+Index flattening in ADIO close for write
+
+~~~ Version 1.1.1
+Index broadcast in ADIO open for read
+
 ~~~ Version 1.0.0.0pre.0.C
 
 No new features or performance engineering.  Just bug fixes.
