added support for an optional statfs command in the plfsrc
git-svn-id: https://plfs.svn.sourceforge.net/svnroot/plfs/trunk@439 979fb63a-54b4-4514-8d67-9ab8ea1b59df

--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,7 @@
+~~~ Version 1.1.6
+Added support for a statfs override in the plfsrc file 
+in response to ticket 35609.
+
 ~~~ Version 1.1.5
 Bug fix for symbolic links.  I swear this is the second time I fixed this bug
 
