reved due to rename bug fix
git-svn-id: https://plfs.svn.sourceforge.net/svnroot/plfs/trunk@448 979fb63a-54b4-4514-8d67-9ab8ea1b59df

--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,6 @@
+~~~ Version 1.1.7
+Fixed a bug in rename.
+
 ~~~ Version 1.1.6
 Added support for a statfs override in the plfsrc file 
 in response to ticket 35609.
