--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,13 @@
+~~~ Version 2.0.1
+* Reduced container overhead by 4 files and 2 directories: combined access
+and creator, removed version dir and combined all 3 version files into one,
+combined openhosts and meta dir
+* Fix bug in bitmap in ad_plfs_open where some compilers don't correctly 
+do bit's.  Now we do bitmaps ourselves instead of relying on the compiler.
+
+~~~ Version 2.0
+* Got the distributed metadata hashing working.  Removed map from plfsrc
+
 ~~~ Version 1.1.8
 * Fixed the getattr bug (we were just getting the attr from the openfile
 handle and not getting it from the Container as well).  This made the size
