added a thing about tools/plfs_version
git-svn-id: https://plfs.svn.sourceforge.net/svnroot/plfs/trunk@538 979fb63a-54b4-4514-8d67-9ab8ea1b59df

--- a/Changelog
+++ b/Changelog
@@ -1,4 +1,7 @@
 ~~~ Version 2.0.2
+* added tools/plfs_version which queries all plfs mountpoints and reports
+their versions.  It also digs into a container and reports the version that
+created a particular plfs file if a target is passed on the command line
 * Fixed the bug where multiple slashes (e.g. /mnt///plfs) were not working
 in the ADIO path.  They were fine in the FUSE path because FUSE cleans up
 paths for us but in the ADIO path, they were failing because we were just
