updated the README's to indicate that they are all deprecated in favor of top-level/README.install
git-svn-id: https://plfs.svn.sourceforge.net/svnroot/plfs/trunk@547 979fb63a-54b4-4514-8d67-9ab8ea1b59df

--- a/ad-patches/README
+++ b/ad-patches/README
@@ -1,3 +1,10 @@
+This file is deprecated.  Pls refer to the README.install in the top-level
+directory.
+
+#######################################
+EVERYTHING BELOW THIS POINT IS DEPRECATED
+#######################################
+
 From: Ben McClelland <ben@lanl.gov>
 Date: Wed, 6 Oct 2010 17:17:32 -0600
 To: John Bent <johnbent@lanl.gov>
