updated to reflect latest changes
git-svn-id: https://plfs.svn.sourceforge.net/svnroot/plfs/trunk@578 979fb63a-54b4-4514-8d67-9ab8ea1b59df

--- a/Changelog
+++ b/Changelog
@@ -1,4 +1,6 @@
 ~~~ Version 2.0.2
+* added the sweet-ass FileOp.* classes
+* updated chown/chmod to work w/ shadow containers  
 * fixed race condition bug in shadow subdirs being linked into canonical
 * made tools like plfs_recover a bit more user friendly.  the plfs lib
 used to only work if you passed full logical paths which meant if your cwd
