edited to remind ppl to check the man pages for help
git-svn-id: https://plfs.svn.sourceforge.net/svnroot/plfs/trunk@842 979fb63a-54b4-4514-8d67-9ab8ea1b59df

--- a/README
+++ b/README
@@ -2,6 +2,10 @@
             PLFS: A Checkpoint Filesystem for Parallel Applications
 ################################################################################
 
+This README is largely deprecated.  Most of this info is found more accurately
+in README.install.  Also, the man pages such as the man page for plfsrc are
+pretty good.
+
 ***************************************************************************
 User Installation (Default Configuration Values. See configure --help)
 ***************************************************************************
