The top-level README was not being included in the tarball generated by 'make dist'. Added README.mlog to the tarball since a tarball release is mlog capable. Changed the order of a couple of items in the README only to satisfy a need to prioritize things. :)
git-svn-id: https://plfs.svn.sourceforge.net/svnroot/plfs/trunk@1101 979fb63a-54b4-4514-8d67-9ab8ea1b59df

--- a/README
+++ b/README
@@ -76,11 +76,12 @@ Other Info
 
 For information on PLFS's POSIX-compliance, please see README.POSIX.
 
+Information about the logging capabilities of PLFS is contained in
+README.mlog. Please see that file for more information about getting log
+information from PLFS.
+
 Information for developers, such as rules for coding and working with the
 source repository, is contained in README.developer.
-
-Information about the logging capabilities is contained in README.mlog. Please
-see that file for more information about getting log information from PLFS.
 
 
 ***************************************************************************
