--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,56 @@
+~~~ Version 2.2.3
+* Cleaned-up MPI/IO Patching Process
+Ticket #87 (from old Sourceforge.net repository): Cleaned-up files and added
+necessary logic to handle patching for MPICH2 and OpenMPI 1.4.x and 1.6.
+
+* Changing N-to-N Directory Permissions Broken
+Ticket #84: Ensured that the files under a directory had their ownership and
+permissions changed to match the directory that contains them.
+
+* Made mlog More Clear with Respect to Types
+Ticket #95: Made some changes to mlog and type casting to make it type-correct.
+
+* Fixed N-to-N Overwrite Pattern on N-to-1 Mount Point
+Ticket #96: N-to-N files were not reporting the correct size when they were
+overwritten using an N-to-1 mount point. They now report the correct sizes
+after each overwrite.
+
+* Fixed N-to-1 (Container Mode) Permission Bit Setup
+Ticket #97: PLFS represents a file in this mode as a combination of
+directories and files. The permissions on the directories, in particular,
+have to have certain bits set in order to allow the specified access to
+the underlying files that represent the PLFS file.
+
+* Fixed Makefile.am for OpenMPI 1.6.x Patch
+Ticket #98: 'make dist' didn't work for OpenMPI 1.6.x. We fixed
+the Makefile.am so that it does work.
+
+* Fixed Unlink with New Permission Scheme
+Ticket #99: After implementing the new permissions scheme for PLFS files,
+we fixed unlink so that it worked correctly.
+
+* Transferred Permissions Fixes to Parallel Operations Branch
+Ticket #100: We are working on making certain file operations parallel.
+That is in another branch. We wanted to make sure that all the permissions
+work was transferred to that branch so that the permissions work persists in
+future releases.
+
+* Fixed Rename in Container Mode
+Ticket #101: Renaming files in container mode was not working. It is now.
+
+* Fixed Handling of Truncation on File Creation
+Tickets #103, 104, and 107: There were some issues with files being incorrectly
+truncated when they were created. MPI and POSIX do things differently. It now
+behaves correctly for all cases.
+
+* Use plfs_access instead of lstat
+Ticket #106: In the MPI/IO interface we were using lstat. We are using
+plfs_access instead.
+
+* Correctly Handle Use of MPI_MODE_EXCL
+Ticket #108: Fixed the MPI/IO interface to correctly return an error when
+MPI_MODE_EXCL is used and the file exists.
+
 ~~~ Version 2.2.2
 * Ticket #86: Fixed an issue in ad_plfs/ad_plfs.c so that Open MPI v1.6 can be
 patched. Updated supporting patches and patching scripts to be able to work
