Add information for 2.3.rc1 tagging to VERSION and ChangeLog.

--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,53 @@
+~~~ Version 2.3
+* IOStore
+Issue #120: IOStore is the virtual layer that acts as an interface to physical
+storage. It adds no new functionality in this release, but will be utilized in
+future releases. For a working example, look at the POSIX IOStore in src. 
+
+* File Descriptor Limitation
+Issue #114: There is a limit to the number of files that a process may have
+open at any given time. This limit is determined with this command:
+
+% limit descriptors
+descriptors 1024 
+
+Some systems will allow you to change your limit by specifying a new limit.
+% limit descriptors 2048
+% limit descriptors
+descriptors 2048 
+
+Other systems will require a privileged user to do this. On the large system
+at LANL, Cielo, the System Admins set the limit for a select user group on
+ci-mesh to a higher number so that serial inspection applications that need to
+open all files in a set could do so without error.
+
+To close this issue, we still need to implement a cache mechanism so that the
+PLFS library can live within any limit.
+
+* Correct plfsrc man pages
+Issue #121: Some of the descriptions of the plfsrc parameters in the man page
+were incorrect. For example, "statfs" did not explain that it must follow a
+"mount_point" directive and only modifies the "mount_point" directive that it
+follows. Parameter explanations were clarified and corrected.
+
+* Call "readdir" and all PLFS API Calls without FUSE Mount
+Issue #123: We need to be able to call "readdir" and all PLFS library API
+calls without requiring a FUSE mount to be present. The PLFS library was
+intended to be used by applications and not require an operating system file
+system mount to be active. Rather, the PLFS library can use the PLFSRC file to
+determine the validity and backend storage of a PLFS file system.
+
+# Data Sieving and O_RDWR in ad_plfs
+Issue #124: We never want data sieving turned on for PLFS. Data sieving
+requires O_RDWR, but O_RDWR badly affects PLFS performance. The ad_plfs suite
+of files was fixed for Cray's MPI and OpenMPI such that data sieving is
+always off and that it does not allow O_RDWR to be used to open a file.
+
+# Removal of weak symbols in ad_plfs.c
+Issue #134: Weak symbols are now surrounded by C directives. By default, users
+will not see them. Cray developers will be able to use them as the directives
+are Cray-specific.
+
 ~~~ Version 2.2.3
 * Cleaned-up MPI/IO Patching Process
 Ticket #87 (from old Sourceforge.net repository): Cleaned-up files and added
