--- a/README
+++ b/README
@@ -55,6 +55,15 @@ to start at boot time and plfs checks backend directories when it is started,
 this could result in thousands or millions (or more) of stat calls to the
 underlying filesystem in a very short period of time.
 
+NOTE on the above NOTES: Not checking backend directories only applies to
+fuse's actual mount command; plfs will not check the existence of backend
+directories during that call. However, it is possible for fuse to issue
+additional calls on the mount point, such as statfs, when
+'plfs <mount point>' is executed on the command line. These calls will fail
+and it may not be possible to mount plfs without the backend directories
+for those versions/implementations of fuse. It is possible to see what
+commands fuse makes when running 'plfs <mount point>' by using strace.
+
 Several options can be passed to the plfs binary that are passed on to the FUSE
 system. Use the plfs binary's -o command line parameter. Use 'plfs -h' to see
 all options that can be passed. Some useful ones are:
